--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-name: Herring Cove
-author: Herring Cove
+name: MMO
+author: MMO
 baseurl: 
 description: theme for jekyll
-github: http://www.github.com/arnp
-twitter: http://www.twitter.com/
+github: http://github.com/yzk114360
+QQ: 11436052
 facebook: http://www.facebook.com
 linkedin: http://www.linkedin.com
 email: rnpatel[at]me.com
