--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 name: MMO
 author: MMO
 baseurl: 
-description: theme for jekyll
+description: 我只是一个前端打字员
 github: http://github.com/yzk114360
-QQ: 11436052
-facebook: http://www.facebook.com
-linkedin: http://www.linkedin.com
+# QQ: 11436052
+# facebook: http://www.facebook.com
+# linkedin: http://www.linkedin.com
 email: rnpatel[at]me.com
 location: 42°2'16"N   70°12'47"W
 disqus: diqus-username
