--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ github: http://github.com/yzk114360
 # QQ: 11436052
 # facebook: http://www.facebook.com
 # linkedin: http://www.linkedin.com
-email: rnpatel[at]me.com
-location: 42°2'16"N   70°12'47"W
-disqus: diqus-username
+# email: rnpatel[at]me.com
+# location: 42°2'16"N   70°12'47"W
+# disqus: diqus-username
 
 ##Make sure to edit the above fields, especially for disqus.
 
