--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: MMO
 author: MMO
 baseurl: 
-description: 我只是一个前端打字员
+description: 灵魂前端打字员
 github: http://github.com/yzk114360
 # QQ: 11436052
 # facebook: http://www.facebook.com
