--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ author: MMO
 baseurl: 
 description: 灵魂前端打字员
 github: http://github.com/yzk114360
-bannerText: 123
+bannerText: Hello World!
 # QQ: 11436052
 # facebook: http://www.facebook.com
 # linkedin: http://www.linkedin.com
